syntax = "proto3";

package inventory;

import "../base/entities.base.proto";

message GetInventoryRequest {
    string userId = 1; 
}

message GetInventoryResponse {
    repeated Inventory items = 1; 
}

message AddInventoryRequest {
    string userId = 1;      
    Inventory inventory = 2; 
}